tests/errors/4_type_errors/sample29.ifj16.java
class Main {
    static double a;
    static void run() {}
    static void ruen(int a, double b) {
        a = ifj16.sort("fads"); /// lvalue double
    }
}
